fix wrong width

--- a/css/edoweb_lbz.css
+++ b/css/edoweb_lbz.css
@@ -150,7 +150,7 @@ fieldset.edoweb-facets {
 }
 
 fieldset.edoweb-entity-list {
-    width: 70%;
+    width: 75%;
     float: left;
 }
 
